--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,9 +7,10 @@
 .hover\:pause:hover {
   animation-play-state: paused;
 }
+/* Smooth left-to-right ticker */
 @keyframes marquee {
   0% {
-    transform: translateX(0%);
+    transform: translateX(-100%);
   }
   100% {
     transform: translateX(100%);
@@ -17,7 +18,8 @@
 }
 
 .animate-marquee {
-  animation: marquee 25s linear infinite;
+  animation: marquee 20s linear infinite;
+  will-change: transform;
 }
 
 
